Added ID that was forgotten and minimized the text side so everything fits

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".About"
+            android:parentActivityName=".MainActivity"
+            android:label="About"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
